# optimator

./: CMakeLists.txt
src/: main.cpp
